--- a/front-end/src/main/resources/templates/board/new.html
+++ b/front-end/src/main/resources/templates/board/new.html
@@ -3,7 +3,7 @@
       lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>게시물 상세조회</title>
+    <title>게시물 등록</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <style>
@@ -26,13 +26,31 @@
                 location.href = /*[[@{/board}]]*/ "/board";
             });
 
-            $("#btnMoveModifyForm").click(function() {
-                location.href = /*[[@{/board/{id}/edit(id = ${info.id})}]]*/ "/board/0/edit";
-            });
+            $("#btnReg").click(function() {
+                let title = $("#title").val();
 
-            $("#btnDelete").click(function() {
-                if (confirm("삭제하시겠습니까?")) {
-                    $("#removeBoardForm").submit();
+                if (title == "") {
+                    alert("제목을 입력하세요.");
+                    $("#title").focus();
+                    return;
+                }
+
+                if (title.length > 50) {
+                    alert("제목은 50자를 초과해서 입력할 수 없습니다.");
+                    $("#title").focus();
+                    return;
+                }
+
+                let contents = $("#contents").val();
+
+                if (contents == "") {
+                    alert("내용을 입력하세요.");
+                    $("#contents").focus();
+                    return;
+                }
+
+                if (confirm('등록하시겠습니까?')) {
+                    $("#regBoardForm").submit();
                 }
             });
         });
@@ -41,45 +59,36 @@
 <body>
 <article>
     <div class="container">
-        <h2>게시물 상세조회</h2>
+        <h2>게시물 등록</h2>
         <div>
             <button id="btnMoveList" type="button" class="btn btn-sm btn-primary" style="float:right;margin-bottom:10px;">목록</button>
-            <button id="btnDelete" type="button" class="btn btn-sm btn-danger" style="float:right;margin-bottom:10px;margin-right:8px;">삭제</button>
-            <button id="btnMoveModifyForm" type="button" class="btn btn-sm btn-warning" style="float:right;margin-bottom:10px;margin-right:8px;">수정</button>
+            <button id="btnReg" type="button" class="btn btn-sm btn-success" style="float:right;margin-bottom:10px;margin-right:8px;">등록</button>
         </div>
         <div class="table-responsive">
-            <form id="removeBoardForm" th:action="@{/board/{id}(id = ${info.id})}" th:method="delete"></form>
-            <table th:object="${info}" class="table table-bordered table-sm">
-                <thead>
+            <form id="regBoardForm" th:action="@{/board}" method="post">
+                <table class="table table-bordered table-sm">
+                    <thead>
                     <colgroup>
                         <col style="width:10%" />
                         <col style="width:auto" />
                     </colgroup>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td class="titleTd">제목</td>
-                        <td th:text="*{title}"></td>
+                        <td><input type="text" id="title" name="title" style="width: 100%" maxlength="50"/></td>
                     </tr>
                     <tr>
                         <td class="titleTd">내용</td>
                         <td>
-                            <textarea th:field="*{contents}"
-                                      readonly="readonly"
-                                      cols="10"
-                                      style="width: 100%;height: 15em;border: none;resize: none;"></textarea>
+                                <textarea id="contents" name="contents"
+                                          cols="10"
+                                          style="width: 100%;height: 15em;resize: none;"></textarea>
                         </td>
                     </tr>
-                    <tr>
-                        <td class="titleTd">등록일시</td>
-                        <td th:text="${#temporals.format(info.regDt, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    </tr>
-                    <tr>
-                        <td class="titleTd">수정일시</td>
-                        <td th:text="${#temporals.format(info.updDt, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </form>
         </div>
     </div>
 </article>
